[package]
name = "rankforum"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.12.1", features = ["v4"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11.6"
rouille = "3.6.2"
rusqlite = "0.33.0"
lazy_static = "1.4.0"
ring = "0.17.8"
untrusted = "0.9.0"
serde_json = "1.0.137"
base64 = "0.22.1"